# Codeverse-compositor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
config/: default.toml
crates/codeverse-compositor/: Cargo.toml
crates/codeverse-compositor/src/: compositor.rs  focus.rs  main.rs
crates/codeverse-compositor/src/backend/: drm.rs  mod.rs  winit.rs
crates/codeverse-compositor/src/handlers/: compositor.rs  data_device.rs  dmabuf.rs  fractional_scale.rs  layer_shell.rs  mod.rs  output.rs  selection.rs  shm.rs  viewporter.rs  xdg_decoration.rs  xdg_shell.rs
crates/codeverse-compositor/src/input/: keyboard.rs  mod.rs  pointer.rs
crates/codeverse-compositor/src/render/: decorations.rs  mod.rs  wallpaper.rs
crates/codeverse-config/: Cargo.toml
crates/codeverse-config/src/: config.rs  keybindings.rs  lib.rs  theme.rs
crates/codeverse-ipc/: Cargo.toml
crates/codeverse-ipc/src/: lib.rs
crates/codeverse-launcher/: Cargo.toml
crates/codeverse-launcher/src/: apps.rs  lib.rs
crates/codeverse-window/: Cargo.toml
crates/codeverse-window/src/: lib.rs
crates/codeverse-window/src/floating/: manager.rs  mod.rs
crates/codeverse-window/src/layout/: mod.rs  split.rs  stack.rs  tabbed.rs
crates/codeverse-window/src/tree/: container.rs  mod.rs  tree.rs
crates/codeverse-window/src/workspace/: manager.rs  mod.rs
scripts/: deploy-to-vm.sh  qemu-test.sh
