[package]
name = "codeverse-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "codeverse_config"
path = "src/lib.rs"

[dependencies]
# Configuration
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

# Input (for keybindings)
xkbcommon = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
