[package]
name = "codeverse-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "codeverse_ipc"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unix sockets
nix = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
